[package]
name = "dleq"
version = "0.0.0"
description = "Implementation of a Discrete Log Equality proof supporting a variety of curves"
license = "MIT"
authors = ["Luke Parker <lukeparker5132@gmail.com>", "Lee Bousfield <ljbousfield@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1"
hex-literal = "0.3"
hex = "0.4"

digest = "0.9"
sha2 = "0.9"
blake2 = "0.9"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

rand_core = "0.5"

curve25519-dalek = { version = "3.2", features = ["serde"] }
ff = "0.10"
group = "0.10"
k256 = "0.9"
p256 = "0.9"
jubjub = "0.7"

# TODO: Potentially remove the below
log = "0.4.8"

# TODO: Remove the below
anyhow = "1"

[dev-dependencies]
rand = "0.7"
env_logger = "0.9"
