[package]
name = "dleq"
version = "0.0.0"
description = "C bindings around dleq"
license = "MIT"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex-literal = "0.3"
lazy_static = "1"
rand_core = "0.6"

digest = "0.10"
blake2 = "0.10"

transcript = { package = "flexible-transcript", version = "0.1.3", features = ["recommended"] }

group = "0.12"

k256           = { version = "0.11", features = ["arithmetic", "bits"] }
dalek-ff-group = "0.1.2"

dleq = { package = "dleq-serai", version = "0.1.0", features = ["serialize", "experimental"] }
